Fixes a bunch of deprecated methods, classes Resolves a number of warnings Adds vscode settings for fun :)